# libwebrtc

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
libwebrtc/: Cargo.toml  README.md  reactive-encoding.md
libwebrtc-build/: .gitignore  BUILD.gn  Dockerfile  Dockerfile.dockerignore  README.md  REVISION
libwebrtc-sys/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  flags-mac.txt  flags.txt
libwebrtc-sys/include/: alias.h  api.h  api_internal.h  async_dns_resolver_factory.h  audio_device_module.h  audio_encoder_factory.h  audio_encoding.h  audio_track.h  audio_track_source.h  audio_track_source_internal.h  candidate.h  codec_specific_info.h  color_space.h  data_channel.h  encoded_image_callback.h  encoded_image_factory.h  error.h  ice_candidate.h  ice_transport.h  internal_observer.h  logging.h  media_stream.h  media_stream_track.h  peer_connection.h  peer_connection_factory.h  peer_connection_observer.h  peer_connection_session_observers.h  peer_connection_stats_callback.h  peerconnection_factory_config.h  reactive_video_encoder_wrapper.h  ref_count.h  rtc_buffer.h  rtp_parameters.h  rtp_receiver.h  rtp_sender.h  rtp_transceiver.h  rtti.h  rust_entry.h  rust_shared.h  sdp_video_format.h  (+20 more)
libwebrtc-sys/include/p2p/: ice_transport_internal.h
libwebrtc-sys/include/pc/: ice_transport_internal.h  jsep_api.h
libwebrtc-sys/include/rtc_base/: base.h  certificates.h
libwebrtc-sys/include/sctp/: socket.h
libwebrtc-sys/scripts/: rebuild
libwebrtc-sys/src/: api.cc  api.rs  async_dns_resolver_factory.cc  async_dns_resolver_factory.rs  audio_device_module.cc  audio_encoder_factory.cc  audio_encoding.cc  audio_encoding.rs  audio_track.rs  audio_track_source.cc  audio_track_source.rs  audio_track_source_internal.cc  candidate.cc  candidate.rs  codec_specific_info.cc  codec_specific_info.rs  color_space.cc  data_channel.cc  data_channel.rs  encoded_image_callback.cc  encoded_image_factory.cc  encoded_image_factory.rs  error.rs  ice_candidate.cc  ice_candidate.rs  ice_transport.cc  ice_transport.rs  lib.rs  logging.cc  logging.rs  macros.rs  media_stream.cc  media_stream.rs  peer_connection.cc  peer_connection.rs  peer_connection_factory.cc  peer_connection_factory.rs  peer_connection_manager.cc  peer_connection_observer.cc  peer_connection_observer.rs  (+48 more)
libwebrtc-sys/src/p2p/: ice_transport_internal.cc  ice_transport_internal.rs  lib.rs  mod.rs
libwebrtc-sys/src/pc/: jsep_api.cc  jsep_api.rs  mod.rs  session_description.rs
libwebrtc-sys/src/rtc_base/: base.cc  base.rs  certificates.cc  certificates.rs  mod.rs
libwebrtc-sys/src/sctp/: socket.cc  socket.rs
libwebrtc-sys/tests/dummy/: CMakeLists.txt  dummies.hh
libwebrtc-sys/tests/func/: CMakeLists.txt
libwebrtc-sys/tests/func/pc/: jsep_api.cc
libwebrtc-sys/tests/mock/: peer_connection_interface.h  privablic.h  stub_macros.h  unimp.h
libwebrtc-sys/tests/mock/api/: rtp_transceiver_interface.h
libwebrtc-sys/tests/unit/: rtp_transceiver.cc
libwebrtc-sys/tests/unit/pc/: jsep_api.cc
libwebrtc/src/: audio_encoder_pool.rs  audio_track.rs  audio_track_source.rs  certificate.rs  data_channel.rs  empty_frame_producer.rs  encoded_audio_frame_producer.rs  encoded_video_frame_producer.rs  error.rs  factory.rs  ice_candidate.rs  jsep.rs  lib.rs  macros.rs  media_type.rs  now.rs  passthrough_video_decoder.rs  passthrough_video_decoder_factory.rs  passthrough_video_encoder.rs  peer_connection.rs  peer_connection_observer.rs  raw_video_frame_producer.rs  reactive_video_encoder.rs  rtc_base.rs  rtc_error.rs  sdp.rs  sdp_video_format.rs  shared_audio_encoder.rs  shared_audio_encoder_factory.rs  transceiver.rs  transport.rs  video_codec.rs  video_encoder.rs  video_encoder_pool.rs  video_frame.rs  video_track.cc  video_track.rs  video_track_source.rs  workspace.code-workspace
