[package]
name = "libwebrtc-sys"
version = "0.1.0"
edition = "2018"
authors = ["Little Bear Labs, Inc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.56"
parking_lot = "0.11.2"

[build-dependencies]
cxx-build = "1.0.56"
reqwest = "0.11.5"
run_script = "^0.9.0"