[package]
name = "libwebrtc-sys"
version = "0.1.2"
edition = "2018"
authors = ["Little Bear Labs, Inc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.56"
lazy_static = "1.4.0"
log = "0.4.14"
parking_lot = "0.11.2"
thiserror = "1.0.30"

[build-dependencies]
cxx-build = { version = "1.0.56", features = ["parallel"] }
reqwest = "0.11.5"
run_script = "^0.9.0"
glob = "^0.3.0"

[dev-dependencies]
base64 = "0.13.0"
bytes = "1.1.0"
media_pipeline = { git = "https://github.com/arcas-io/media-pipeline", branch = "main" }
